--- a/src/app/pages/clipboard-history/clipboard-history.page.html
+++ b/src/app/pages/clipboard-history/clipboard-history.page.html
@@ -1,4 +1,19 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div class="light-theme">
-  
-</div>
+<ion-header no-border>
+  <ion-title class="title"><span>XC</span> - clipboard</ion-title>
+  <ion-toolbar color="light">
+    <ion-searchbar animated search-icon="search" type="search"></ion-searchbar>
+
+    <ion-buttons slot="secondary">
+      <ion-button>
+        <ion-icon color="primary" slot="icon-only" name="contact"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-buttons slot="primary">
+      <ion-button>
+        <ion-icon color="primary" slot="icon-only" name="more"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content></ion-content>
