--- a/src/app/pages/clipboard-history/clipboard-history.page.scss
+++ b/src/app/pages/clipboard-history/clipboard-history.page.scss
@@ -3,7 +3,7 @@
   font-size: 0.7rem;
   font-weight: 100;
   padding: 4px 10px 4px 10px;
-  background-color: rgb(15, 100, 200);
+  background-color: #373d59;
   > span {
     font-size: 0.7rem;
     font-weight: 700;
