--- a/src/app/pages/clipboard/clipboard.page.html
+++ b/src/app/pages/clipboard/clipboard.page.html
@@ -1,27 +1,29 @@
 <ion-content>
   <ion-tabs>
-    <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="history">
-        <ion-icon name="laptop"></ion-icon>
-      </ion-tab-button>
+    <div>
+      <ion-tab-bar slot="bottom">
+        <ion-tab-button tab="history">
+          <ion-icon name="laptop"></ion-icon>
+        </ion-tab-button>
 
-      <ion-tab-button tab="history1">
-        <ion-icon name="image"></ion-icon>
-      </ion-tab-button>
+        <ion-tab-button tab="history1">
+          <ion-icon name="image"></ion-icon>
+        </ion-tab-button>
 
-      <ion-tab-button tab="history2">
-        <ion-icon name="browsers"></ion-icon>
-      </ion-tab-button>
+        <ion-tab-button tab="history2">
+          <ion-icon name="browsers"></ion-icon>
+        </ion-tab-button>
 
-      <!-- share icon -->
+        <!-- share icon -->
 
-      <ion-tab-button tab="history">
-        <ion-icon name="search"></ion-icon>
-      </ion-tab-button>
+        <ion-tab-button tab="history">
+          <ion-icon name="search"></ion-icon>
+        </ion-tab-button>
 
-      <ion-tab-button tab="history">
-        <ion-icon name="settings"></ion-icon>
-      </ion-tab-button>
-    </ion-tab-bar>
+        <ion-tab-button tab="history">
+          <ion-icon name="settings"></ion-icon>
+        </ion-tab-button>
+      </ion-tab-bar>
+    </div>
   </ion-tabs>
 </ion-content>
