--- a/src/app/pages/clipboard-history/clipboard-history.page.html
+++ b/src/app/pages/clipboard-history/clipboard-history.page.html
@@ -1,20 +1,19 @@
-<!-- <ion-header no-border> -->
-<ion-header>
-  <ion-toolbar>
+<ion-header no-border>
+  <!-- <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button>
         <ion-icon slot="icon-only" name="menu"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title>clipboard history</ion-title>
-  </ion-toolbar>
+  </ion-toolbar> -->
 </ion-header>
 <!-- <ion-toolbar color="light">
-    <ion-searchbar animated search-icon="search" type="search"></ion-searchbar>
-    <ion-buttons slot="secondary">
-      <ion-button>
-        <ion-icon color="primary" slot="icon-only" name="contact"></ion-icon>
-      </ion-button>
+  <ion-searchbar animated search-icon="search" type="search"></ion-searchbar>
+  <ion-buttons slot="secondary">
+    <ion-button>
+      <ion-icon color="primary" slot="icon-only" name="contact"></ion-icon>
+    </ion-button>
     </ion-buttons>
     <ion-buttons slot="primary">
       <ion-button>
