--- a/src/app/pages/google-apis/google-apis.page.html
+++ b/src/app/pages/google-apis/google-apis.page.html
@@ -1,10 +1,10 @@
 <ion-content>
-  <div *ngIf="(afAuth.user | async) as user; else showLogin">
-    <h1>Hello {{ user.displayName }}!</h1>
-    <ion-button (click)="signOut()">Sign-out</ion-button>
+  <div *ngIf="true; else showLogin">
+    <h1>Hello!</h1>
+    <ion-button>Sign-out</ion-button>
   </div>
   <ng-template #showLogin>
     <p>Please Sign-in.</p>
-    <ion-button (click)="signInWithGoogle()">Sign-in with Google</ion-button>
+    <ion-button>Sign-in with Google</ion-button>
   </ng-template>
 </ion-content>
