--- a/src/app/components/clipboard-item/clipboard-item.component.html
+++ b/src/app/components/clipboard-item/clipboard-item.component.html
@@ -1,1 +1,15 @@
-<ion-item> Hello World </ion-item>
+<ion-item>
+  <ion-button slot="start" fill="clear" shape="round">
+    <ion-icon slot="icon-only" name="home" slot="end"></ion-icon>
+  </ion-button>
+  <ion-label text-wrap>
+    <h3>Because change happened</h3>
+    <div>
+      <div>This is sparta</div>
+      <p>Hello World</p>
+    </div>
+  </ion-label>
+  <ion-button slot="end" fill="clear" shape="round">
+    <ion-icon slot="icon-only" name="star" slot="end"></ion-icon>
+  </ion-button>
+</ion-item>
