--- a/src/app/pages/clipboard/clipboard.page.html
+++ b/src/app/pages/clipboard/clipboard.page.html
@@ -1,8 +1,8 @@
 <ion-header no-border>
   <ion-toolbar>
     <ion-title>
-      <h4>XCORE <span>clipboard </span></h4>
-      <p>A realtime clipboard</p>
+      <h4>CLOUD <span>clips </span></h4>
+      <p>cloud-clips@outlook.com</p>
     </ion-title>
     <ion-buttons slot="secondary">
       <ion-button color="tertiary">
