--- a/src/app/components/clipboard-item/clipboard-item.component.scss
+++ b/src/app/components/clipboard-item/clipboard-item.component.scss
@@ -1,50 +1,3 @@
-.container.side {
-  position: absolute;
-  display: flex;
-  top: 36px;
-  right: 0;
-
-  .btn {
-    margin: 0;
-  }
-
-  ion-button {
-    --padding-start: 2px;
-    --padding-end: 2px;
-  }
-}
-
-.button {
-  margin-inline-end: 8px;
-
-  &[custom] {
-    width: 36px;
-    height: 36px;
-  }
-}
-
-.document {
-  position: relative;
-  .badge {
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    top: 12px;
-    left: 8px;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
-  }
-}
-
-ion-icon[name='document'] {
-  width: 2rem;
-  height: 2rem;
-  color: var(--ion-color-tertiary-tint);
-}
-
 ion-item {
   --padding-start: 0;
   --padding-end: 8px;
@@ -63,4 +16,44 @@ h3 {
 }
 p {
   color: var(--text-color--light);
+}
+
+ion-button {
+  margin-inline-end: 8px;
+}
+
+ion-button.container.start {
+  width: 36px;
+  height: 36px;
+  .doc {
+    position: relative;
+    .badge {
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      top: 12px;
+      left: 8px;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1;
+    }
+  }
+}
+
+.container.bottom {
+  justify-content: space-between;
+  display: flex;
+  ion-button {
+    margin: 0;
+    --padding-start: 2px;
+    --padding-end: 2px;
+  }
+}
+
+ion-icon[name='document'] {
+  width: 2rem;
+  height: 2rem;
+  color: var(--ion-color-tertiary-tint);
 }
