--- a/src/app/components/clipboard-item/clipboard-item.component.html
+++ b/src/app/components/clipboard-item/clipboard-item.component.html
@@ -12,12 +12,12 @@
     <p>1 minutes ago</p>
     <div class="container bottom">
       <div>
-        <ion-button class="btn" fill="clear" shape="round">
+        <ion-button fill="clear" shape="round">
           <ion-icon name="star"></ion-icon>
         </ion-button>
       </div>
       <div>
-        <ion-button class="btn" fill="clear" shape="round">
+        <ion-button fill="clear">
           remove
         </ion-button>
       </div>
