--- a/src/app/components/clipboard-item/clipboard-item.component.html
+++ b/src/app/components/clipboard-item/clipboard-item.component.html
@@ -12,6 +12,12 @@
     <p>1 minutes ago</p>
     <div class="container bottom">
       <div>
+        <ion-button fill="clear" shape="round" color="light">
+          <ion-icon name="cloud"></ion-icon>
+        </ion-button>
+        <ion-button fill="clear" shape="round" color="light">
+          <ion-icon name="share"></ion-icon>
+        </ion-button>
         <ion-button fill="clear" shape="round">
           <ion-icon name="star"></ion-icon>
         </ion-button>
