--- a/src/app/components/clipboard-item/clipboard-item.component.html
+++ b/src/app/components/clipboard-item/clipboard-item.component.html
@@ -23,7 +23,7 @@
         </ion-button>
       </div>
       <div>
-        <ion-button fill="azure">
+        <ion-button fill="clear">
           remove
         </ion-button>
       </div>
