--- a/src/app/components/clipboard-item/clipboard-item.component.scss
+++ b/src/app/components/clipboard-item/clipboard-item.component.scss
@@ -47,6 +47,7 @@ ion-button.container.start {
       justify-content: center;
       align-items: center;
       z-index: 1;
+      font-size: 0.6rem;
     }
   }
 }
