--- a/src/app/components/clipboard-item/clipboard-item.component.html
+++ b/src/app/components/clipboard-item/clipboard-item.component.html
@@ -19,7 +19,7 @@
       "
       [title]="clip.plainText"
     ></h3>
-    <p>{{ moment(clip.createdAt).fromNow() }}</p>
+    <p>{{ clip.fromNow }}</p>
     <div class="container bottom">
       <div>
         <ion-button fill="clear" shape="round" color="light">
