--- a/src/app/pages/clipboard/clipboard.page.html
+++ b/src/app/pages/clipboard/clipboard.page.html
@@ -1,7 +1,7 @@
 <ion-header no-border>
   <ion-toolbar>
     <ion-title>
-      <h4>CLOUD <span>clips </span></h4>
+      <h4>CLOUD CLIPS</h4>
       <p>cloud-clips@outlook.com</p>
     </ion-title>
     <ion-buttons slot="secondary">
@@ -48,7 +48,7 @@
         [color]="router.url === '/clipboard/history4' ? 'primary' : 'tertiary'"
         (click)="navigate('clipboard/history4')"
       >
-        <ion-icon slot="icon-only" name="browsers"></ion-icon>
+        <ion-icon slot="icon-only" name="settings"></ion-icon>
       </ion-button>
     </div>
     <div class="sidenav-content">
