--- a/src/app/components/clipboard-item/clipboard-item.component.scss
+++ b/src/app/components/clipboard-item/clipboard-item.component.scss
@@ -69,9 +69,8 @@ ion-button.container.start {
 }
 
 ion-button.remove {
-  color: var(--text-color--light);
-  font-size: 0.7rem;
-  margin-top: 15px;
+  color: var(--ion-color-medium);
+  height: 27.3px;
 }
 
 .container.bottom {
