change style color

--- a/src/app/components/clipboard-item/clipboard-item.component.html
+++ b/src/app/components/clipboard-item/clipboard-item.component.html
@@ -58,7 +58,7 @@
         </ion-button>
       </div>
       <div *ngIf="hasMouseEntered">
-        <ion-button class="remove" fill="clear" shape="round" color="secondary">
+        <ion-button class="remove" fill="clear" shape="round">
           <ion-icon name="trash"></ion-icon>
         </ion-button>
       </div>
