--- a/src/global.scss
+++ b/src/global.scss
@@ -1,4 +1,5 @@
 // http://ionicframework.com/docs/theming/
+@import '~material-design-icons/iconfont/material-icons.css';
 @import '~@ionic/angular/css/core.css';
 @import '~@ionic/angular/css/normalize.css';
 @import '~@ionic/angular/css/structure.css';
@@ -9,9 +10,7 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
-
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,800,900');
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import '~material-design-icons/iconfont/material-icons.css';
 
 ion-item {
   --border-color: var(--line-rule-color);
