--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -87,4 +87,6 @@
   --text-color--light-blue: #448aff;
   --line-rule-color: #edf2f6; //#c1c4cd
   --ion-toolbar-border-color: var(--line-rule-color);
+
+  --ion-font-family: 'Roboto', 'Helvetica Neue', 'Noto Sans JP', sans-serif;
 }
