--- a/src/app/pages/clipboard/clipboard.page.scss
+++ b/src/app/pages/clipboard/clipboard.page.scss
@@ -1,7 +1,3 @@
-h4 span {
-  color: var(--ion-color-primary);
-}
-
 .sidenav-container {
   display: flex;
   height: calc(100vh - 58px);
@@ -29,10 +25,8 @@ h4 {
   font-weight: 700;
   text-transform: uppercase;
   margin: 2px 4px 2px 4px;
-  color: var(--text-color--dark);
+  color: var(--ion-color-tertiary);
   > span {
-    font-weight: 500;
-    color: var(--ion-color-primary);
   }
 }
 
